--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <div class="bar3"></div>
                  
                         <div class="mobile-nav" id="mobile-nav">
+                            <div class="bar1" style="margin-left: 10px; margin-top: 5px;"></div>
+                            <div class="bar2" style="margin-left: 10px; margin-top: 5px;"></div>    
+                            <div class="bar3" style="margin-left: 10px; margin-top: 5px;"></div>
                             <a href="#" class="navibutton">Book online</a>
                         <a href="#" class="navibutton">About</a>
                         <a href="Roar-contact.html" class="navibutton">Contact</a>
